height cutoff fixes

--- a/styles/journalforeststyles.css
+++ b/styles/journalforeststyles.css
@@ -95,9 +95,10 @@ img
     /* height: 100%;
     width: 100vw; */
     flex-direction:column;
+    transition: all .5s;
 }
 
-.wrapper-scale {
+/* .wrapper-scale {
   height:100%;
   transform: scale(0.7);
   transform-origin: center;
@@ -105,20 +106,25 @@ img
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+} */
 
-.wrapper {
+.wrapper-scale {
+  height: 100%;
+  transform: scale(0.7);
+  transform-origin: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
-    /* max-width: 1400px; */
-    height: 100%;
-    max-height: 90vh;
+    
+    max-height: 200vh;
     padding: 20px 0;
     box-sizing: border-box;
+    transition: all .5s;
 }
+
+
 
 .padtop {
   padding-top:50px;
@@ -193,6 +199,20 @@ img
     }
   }
 
+  @media screen and (max-height: 550px) {
+
+    .wrapper-scale {
+
+    justify-content: space-between;
+      transition: all .5s;
+    }
+
+    .main-content {
+      padding-bottom:150px;
+      transition: all .5s;
+    }
+  }
+
   @media screen and (max-width: 900px) {
 
     .wrapper-scale {
@@ -255,7 +275,7 @@ img
 
     .main-content {
       width: 100%;
-      height:100%;
+      /* height:100%; */
     }
     
     .wrapper-scale{
