--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,8 @@ p{
     font-size: 22px;
     letter-spacing: 1px;
     text-align: center;
+    /* margin-top: 0px;
+    margin-bottom: 0px; */
 }
 
 figure {
@@ -60,22 +62,14 @@ img
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 100%;
-    width: 100vw; */
+     /* height: 100%; */
+     height:90vh;
+    /*width: 100vw; */
     flex-direction:column;
 }
 
-.wrapper-scale {
-  height:100%;
-  transform: scale(0.7);
-  transform-origin: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .wrapper {
+    transform: scale(0.7);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -83,23 +77,14 @@ img
     width: 100%;
     /* max-width: 1400px; */
     height: 100%;
-    max-height: 90vh;
+    max-height: 100vh;
     padding: 20px 0;
     box-sizing: border-box;
+    transition: all .5s;
 }
 
 .img{
       max-width:65%;
-}
-
-.message{
-  padding:20px;
-  font-size:18px;
-  text-align:center;
-  letter-spacing: 1px;
-  line-height: 30px;
-  margin-bottom:0;
-
 }
 
 
@@ -151,13 +136,96 @@ img
 
   @media screen and (max-width: 900px) {
 
-      .wrapper-scale{
+      /* .wrapper-scale{
         transform: scale(0.6); 
 
       }
+  
+        .wrapper{
+        transform: scale(0.6); 
+
+      } */
   }
 
+  @media screen and (max-height: 660px) {
+        .wrapper{
+        transform: scale(0.5); 
+          transition: all .5s;
+      }
+  }
+
+
+
+  @media screen and (max-height: 500px) {
+        /* .main-content{
+        align-items:top; 
+
+      }*/
+
+      /* .wrapper{
+        max-height:auto;
+      } 
+
+      .main-content{
+        height:auto;
+
+      } */
+
+
+          .main-content {
+      width: 100%;
+      height:auto;
+      /* height:80vh; */
+      /* height:100%; */
+      padding-bottom:175px;
+      
+    }
+  
+
+    .wrapper{
+      padding:20px;
+      transform: none;
+      /* height:100%; */
+      width:100%;
+      /* padding:0; */
+      display:flex;
+      flex-direction: column;
+      max-height:auto;
+      transform: scale(0.6); 
+      /* padding-bottom:50px; */
+      /* max-height: 70vh; */
+      /* justify-content: top; */
+    }
+
+
+  }
+
+  @media screen and (min-width: 700px) {
+    
+    .mobile-show{
+        display: none;      
+    }
+
+      }
+
+
   @media screen and (max-width: 700px) {
+
+      img
+    {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        /* max-width: 75%; */
+        max-width:100%;
+        /* min-width: 300px; */
+        /* min-width: 50px; */
+        height: auto;
+    }
+    
+    .mobile-show{
+    display: block;      
+    }
 
     .centered-img{
       max-width:75%;
@@ -165,32 +233,39 @@ img
     }
 
     p{
-    font-size: 12px;
+    font-size: 14px;
     letter-spacing: 1px;
+    line-height:20px;
+
     text-align: center;
     }
 
     .main-content {
       width: 100%;
-      height:100%;
+      /* height:80vh; */
+      /* height:100%; */
+      
     }
-    
-    .wrapper-scale{
+  
+
+    .wrapper{
+      /* padding:20px; */
       transform: none;
       /* height:100%; */
       width:100%;
-      padding:0;
+      /* padding:0; */
       display:flex;
       flex-direction: column;
-
-    }
-
-    .wrapper{
-      padding:20px;
+      /* max-height: 70vh; */
+      /* justify-content: top; */
     }
 
     .mobile-hide{
       display:none;
+    }
+
+    .mobile-scale{
+      transform: scale(0.9); 
     }
   }
   
